--- a/account-service.yml
+++ b/account-service.yml
@@ -32,3 +32,7 @@ management:
         include: refresh,health
 api:
   auth: http://AUTH-SERVICE/api/user
+jwt:
+  secret: mySecretKey
+  expireMs: 18000000
+  refrEshexpireMs: 18000000
